<resources>
    <string name="app_name">abha-create-verify-android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="create_abha">Create ABHA</string>
    <string name="verify_abha">Verify ABHA</string>
    <string name="aadhaar_info">Aadhaar Info</string>
    <string name="aadhaar_validation">Aadhaar Validation</string>
    <string name="choose_auth_mode">Choose Authentication Mode</string>
    <string name="enter_aadhaar_number">Enter your Aadhaar Number</string>
    <string name="do_you_agree_with_the_terms_and_conditions">Do you agree with the terms and conditions</string>
    <string name="proceed">Proceed</string>
    <string name="scan_QR">Scan Aadhaar QR</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="check_your_aadhaar_linked_mobile_number">Check your aadhaar linked mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="correct_otp">Correct OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="name">Name</string>
    <string name="name_as_per_aadhaar">Name as per Aadhaar</string>
    <string name="enter_name">Enter Name </string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="gender">Gender</string>
    <string name="enter_f_m_other">Enter F/M/Other</string>
    <string name="state">State</string>
    <string name="enter_state">Enter State</string>
    <string name="district">District</string>
    <string name="enter_district">Enter District</string>
    <string name="make_sure_your_demographics_matches_with_aadhaar">Make sure your demographics matches with aadhaar</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile_number_required_for_abha_creation">Mobile number required for ABHA creation</string>
    <string name="abha_address">ABHA address</string>
    <string name="enter_abha_address">Enter ABHA Address</string>
    <string name="preferred_abha_address">Preferred</string>
    <string name="create_default_address">Create default address</string>
    <string name="or">OR</string>
    <string name="terms_and_conditions_text">• I, hereby declare that I am voluntarily sharing my Aadhaar Number and demographic information issued by UIDAI, with National Health Authority (NHA) for the sole purpose of creation of ABHA number.
        I understand that my ABHA number can be used and shared for purposes as may be notified by ABDM from time to time including provision of healthcare services.
        Further, I am aware that my personal identifiable information (Name, Address, Age, Date of Birth, Gender and Photograph) may be made available to the entities working in the National Digital Health Ecosystem (NDHE) which inter alia includes stakeholders and entities such as healthcare professionals (e.g. doctors), facilities (e.g. hospitals, laboratories) and data fiduciaries (e.g. health programmes), which are registered with or linked to the Ayushman Bharat Digital Mission (ABDM), and various processes there under.
        I authorize NHA to use my Aadhaar number for performing Aadhaar based authentication with UIDAI as per the provisions of the Aadhaar (Targeted Delivery of Financial and other Subsidies, Benefits and Services) Act, 2016 for the aforesaid purpose.
        I understand that UIDAI will share my e-KYC details, or response of “Yes” with NHA upon successful authentication. I have been duly informed about the option of using other IDs apart from Aadhaar; however, I consciously choose to use Aadhaar number for the purpose of availing benefits across the NDHE.
        I am aware that my personal identifiable information excluding Aadhaar number / VID number can be used and shared for purposes as mentioned above. I reserve the right to revoke the given consent at any point of time as per provisions of Aadhaar Act and Regulations.\n\n

        • I consent to usage of my ABHA address and ABHA number for linking of my legacy (past) government health records and those which will be generated during this encounter.\n\n

        • I authorize the sharing of all my health records with healthcare provider(s) for the purpose of providing healthcare services to me during this encounter.\n\n

        • I consent to the anonymization and subsequent use of my government health records for public health purposes.

        • I (user), confirm that I have duly informed and explained the beneficiary of the contents of consent for aforementioned purposes.
    </string>
    <string name="abha_number_created">Your ABHA Number has been successfully created. Please find your assigned ABHA Number: %s</string>
    <string name="create_abha_address">Would you like to create your own custom ABHA address? \n\nIf you would like to create your own ABHA address, please tap \'Yes\'. In case you choose \'No\', the system will generate the following default ABHA address: xx-xxxx-xxxx-xxxx%s .</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="abha_address_created">Your ABHA Address has been successfully created.</string>
    <string name="your_details_below">Please find your details below:</string>
    <string name="abha_suffix">\@sbx</string>
    <string name="check_your_abha_linked_mobile_number">Check your ABHA linked mobile number</string>
    <string name="abha_verification">ABHA verification</string>
    <string name="enter_your_abha_number">Enter your ABHA number</string>
    <string name="enter_your_mobil_number">Enter your Mobile number</string>
    <string name="abha_number_is_not_linked">Abha Number is not linked</string>
    <string name="link_it_now">Link it now?</string>
    <string name="abha_number_is_already_linked">ABHA number is already linked to the patient!</string>
    <string name="abha">ABHA</string>
    <string name="no_abha_address">You don\'t have ABHA Address linked to your ABHA Number</string>
    <string name="use_mobile_number_instead">Use mobile number instead</string>
    <string name="linked_abha_number">ABHA numbers found for the given mobile number. Please select one of the following</string>

    <string name="abha_number_not_linked_with_abha_address">ABHA number is not linked with ABHA Address. Click on proceed to create new ABHA Address</string>
    <string name="do_you_have_only_year_of_birth_as_per_aadhaar">Do you have only year of birth as per Aadhaar?</string>
    <string name="yyyy">YYYY</string>


</resources>