<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".AbhaAddressActivity">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/common_app_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/abhaNumberCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abha_number_created"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/abhaAddressPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_abha_address"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abhaAddressPrompt"
            android:layout_marginTop="10dp"
            android:background="@color/btn_color"
            android:gravity="center"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createCustom"
            android:layout_marginTop="10dp"
            android:background="@color/btn_color"
            android:gravity="center"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_below="@+id/createDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/progress_bar"
            android:visibility="invisible"/>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>