<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".AbhaAddressActivity">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/common_app_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/abhaAddressTextInputLayout"
            android:layout_marginBottom="1dp"
            android:text="@string/abha_address"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:fontFamily="@font/roboto" />

        <LinearLayout
            android:id="@+id/abhaAddressTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:hint="@string/enter_abha_address"
                android:fontFamily="@font/roboto"
                app:boxBackgroundColor="@color/box_color"
                app:boxStrokeColor="@color/outline_grey"
                app:boxStrokeWidthFocused="1dp"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAbhaAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    app:boxBackgroundColor="@color/box_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.25"
                android:background="@color/teal_700"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto"
                android:text="@string/abha_suffix" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/abhaAddressTextInputLayout"
            android:text="@string/preferred_abha_address"
            android:textColor="@color/grey"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox"
            android:layout_marginTop="10dp"
            android:background="@color/btn_color"
            android:gravity="center"
            android:text="@string/proceed"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/proceedButton"
            android:indeterminateTint="@color/progress_bar"
            android:visibility="invisible"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>