<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".PatientBioActivity">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/common_app_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/listContainer"
            android:layout_marginBottom="1dp"
            android:text="@string/linked_abha_number"
            android:textColor="@color/black"
            android:paddingBottom="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto" />


        <LinearLayout
            android:id="@+id/listContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listContainer"
            android:layout_marginTop="30dp"
            android:background="@color/btn_color"
            android:gravity="center"
            android:text="@string/proceed"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proceedButton"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/progress_bar"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/abhaAddressNotLinked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proceedButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/abha_number_not_linked_with_abha_address"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:textStyle="normal"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLinked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proceedButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/abha_number_is_already_linked"
            android:textColor="@color/teal_700"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:textStyle="normal"
            android:visibility="invisible"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>