<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".CreateAbhaActivity">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/common_app_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/aadhaarTextInputLayout"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/aadhaar_validation"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aadhaarTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/enter_aadhaar_number"
            app:boxBackgroundColor="@color/box_color"
            app:boxStrokeColor="@color/outline_grey"
            app:boxStrokeWidthFocused="1dp"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aadhaarEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="14"
                android:fontFamily="@font/roboto_medium"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proceedButton"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:textColor="@color/red"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@id/termsConditionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aadhaarTextInputLayout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorLink="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/termsConditionsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_agree_with_the_terms_and_conditions"
                android:textColorLink="@color/gray"
                android:clickable="true"
                android:linksClickable="true" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsConditionsLayout"
            android:layout_marginTop="10dp"
            android:background="@color/btn_color"
            android:gravity="center"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>